# ants

./: .clang-format  .gitignore
src/: readme_install.md  readme_use_demo.md
src/bag_ants/ants_coordinate/active_perception/: CMakeLists.txt
src/bag_ants/ants_coordinate/task_allocation/: CMakeLists.txt  package.xml  readme.md
src/bag_ants/ants_coordinate/traj_utils/: CMakeLists.txt  package.xml
src/bag_ants/ants_explorer_unknown/frontier_space/: CMakeLists.txt  package.xml
src/bag_ants/ants_explorer_unknown/frontier_space/config/: exp.rviz
src/bag_ants/ants_explorer_unknown/frontier_space/include/: Cluster.h  FreeSpace.h  PoseGraph.h  explorer_point_finder copy.h  explorer_point_finder.h  explorer_point_finder2.h  visualization.hpp
src/bag_ants/ants_explorer_unknown/frontier_space/launch/: advanced_param_5_sim.xml  advanced_param_5_sim2.xml  frontier_finder copy.launch  frontier_finder.launch
src/bag_ants/ants_explorer_unknown/frontier_space/msg/: FSLAndFCLMsg.msg  FreeSpaceInfoMsg.msg  FrontierClusterListMsg.msg  FrontierClusterMsg.msg  GridTour.msg  old_svp.msg
src/bag_ants/ants_explorer_unknown/frontier_space/src/: Cluster.cpp  FreeSpace.cpp  Frontier_Node.cpp  PoseGraph.cpp  explorer_point_finder copy.cpp  explorer_point_finder-删除点探索.cpp  explorer_point_finder.cpp  explorer_point_finder2.cpp
src/bag_ants/ants_explorer_unknown/generating_corridor/: CMakeLists.txt  package.xml
src/bag_ants/ants_explorer_unknown/generating_corridor/config/: demo.rviz  demo.yaml
src/bag_ants/ants_explorer_unknown/generating_corridor/include/: CorridorBuilder.h  MeshTable.hpp  Visualizer.h
src/bag_ants/ants_explorer_unknown/generating_corridor/launch/: demo.launch
src/bag_ants/ants_explorer_unknown/generating_corridor/src/: CorridorBuilder.cpp  demo.cpp
src/bag_ants/ants_explorer_unknown/mapping/: CMakeLists.txt  package.xml
src/bag_ants/ants_explorer_unknown/mapping/config/: rviz_sim.rviz
src/bag_ants/ants_explorer_unknown/mapping/include/mapping/: mapping.h
src/bag_ants/ants_explorer_unknown/mapping/launch/: mapping.launch  mapvis.launch  run.launch  rviz.launch
src/bag_ants/ants_explorer_unknown/mapping/src/: mapping.cc  mapping_nodelet.cpp  mapping_sim_reload_node.cpp  mapping_vis_node.cpp  obstacle_detection_node.cpp  surface_extract.cpp
src/bag_ants/ants_explorer_unknown/msg_utils/: CMakeLists.txt  package.xml
src/bag_ants/ants_explorer_unknown/msg_utils/msg/: BinaryFactor.msg  ConnectRobotID.msg  ConnectionSuccess.msg  Edge.msg  EdgeTable.msg  FreeSpace.msg  FreeSpaceAndFrontierInfo.msg  FreeSpaceAndFrontierInfos.msg  FreeSpaceInfo.msg  Frontier.msg  FrontierInfo.msg  GridTour.msg  IPS.msg  Key.msg  LocalPath.msg  LocalTarget.msg  Measurements.msg  MeetingInfo.msg  MeetingResult.msg  Mission.msg  MultiMissions.msg  NonlinearFactorGraph.msg  PointCloudInfo.msg  PointCloudRequest.msg  PoseGraph.msg  Posegra.msg  ReceiveFlag.msg  RelativePoseMeasurement.msg  Replan.msg  RobotInfor.msg  RobotPosition.msg  ScanContext.msg  SuperViewPoint.msg  UnaryFactor.msg  Value.msg  ViewPoint.msg
src/bag_ants/ants_local_planner_free/: CMakeLists.txt  package.xml
src/bag_ants/ants_local_planner_free/launch/: local_planner_free.launch  local_planner_free2car.launch  local_planner_free3car.launch  local_planner_free4car.launch  local_planner_free5car.launch  local_planner_free_rea copy.launch  local_planner_free_rea.launch
src/bag_ants/ants_local_planner_free/src/: localPlanner.cpp
src/bag_ants/ants_local_planner_swarm/: CMakeLists.txt  package.xml  readme.md
src/bag_ants/ants_local_planner_swarm/launch/: ant_follower2car.launch  ant_follower2carb.launch  ant_follower3car.launch  ant_follower3carb.launch  (+12 more)
src/bag_ants/ants_location_interface/: CMakeLists.txt  package.xml  readme.md
src/bag_ants/ants_location_interface/launch/: ants_location_interface.launch  ants_location_interface_rea.launch
src/bag_ants/ants_location_interface/src/: ants_location_interface.cpp
src/bag_ants/ants_passable_area_analysis/: CMakeLists.txt  package.xml  readme.md
src/bag_ants/ants_passable_area_analysis/launch/: ants_passable_area_analysis.launch  ants_passable_area_analysis2car.launch  ants_passable_area_analysis3car.launch  ants_passable_area_analysis4car.launch  ants_passable_area_analysis5car.launch  ants_passable_area_analysis_rea.launch
src/bag_ants/ants_paths_follower/: CMakeLists.txt  package.xml
src/bag_ants/ants_paths_follower/include/ants_paths_follower/: UdpRemote.h  UdpVehicle.h  control.h  cubic_spline.h  liner_speed_regulator.h  pathFollower.h  rosUdpBridge.h
src/bag_ants/ants_paths_follower/launch/: paths_follower.launch  paths_follower2car.launch  paths_follower2car_swarm.launch  paths_follower3car.launch  paths_follower3car_swarm.launch  paths_follower4car.launch  paths_follower4car_swarm.launch  paths_follower5car.launch  paths_follower5car_swarm.launch  paths_follower_drive.launch  paths_follower_rea copy.launch  paths_follower_rea.launch
src/bag_ants/ants_paths_follower/src/: UdpRemote.cpp  UdpVehicle.cpp  control.cpp  cubic_spline.cpp  joy_control.cpp  liner_speed_regulator.cpp  my_test.cpp  pathFollower.cpp  pathFollower_backup.cpp  pathFollower_swarm.cpp  rosUdpBridge.cpp  targetPoint.cpp
src/bag_ants/common_private_msgs/: CMakeLists.txt  package.xml
src/bag_ants/common_private_msgs/msg/: Graph.msg  autonomyMessage.msg  controlMessage.msg  joyMessage.msg  vehicle_param.msg  vehicle_status.msg
src/bag_reacar/vehicle_rea/: CMakeLists.txt  package.xml
src/bag_reacar/vehicle_rea/launch/0_sub_module/: control_driver.launch  location.launch  location_gazebo.launch  powerOff.launch  test.launch
src/bag_reacar/vehicle_rea/launch/1_car_formation/: ants_002_formation.launch  ants_003_formation.launch  ants_004_formation.launch  ants_005_formation.launch
src/bag_reacar/vehicle_rea/launch/2_exploration/: ants_001_exp.launch  ants_002_exp.launch  ants_003_exp.launch  self_exp_ant001.launch
src/bag_reacar/vehicle_rea/launch/3_target_follow/: ants_001_target_follow.launch
src/bag_reacar/vehicle_rea/rviz/: vehicle_simulator5car.rviz
(+75 files in other folders)
