<?xml version="1.0"?>
<package format="2">
  <name>frontier_space</name>
  <version>0.0.0</version>
  <description>The frontier_space package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pn@todo.todo">pn</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <!-- <build_depend>quadrotor_msgs</build_depend> -->

  <build_depend>pcl_ros</build_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <exec_depend>pcl_ros</exec_depend>

  <build_depend>image_transport</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>


  <build_depend>octomap_ros</build_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  <exec_depend>octomap_ros</exec_depend>

  <build_depend>octomap_msgs</build_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <exec_depend>octomap_msgs</exec_depend>

  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- <build_depend>quadrotor_msgs</build_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <exec_depend>quadrotor_msgs</exec_depend> -->

  <build_depend>msg_utils</build_depend>
  <build_export_depend>msg_utils</build_export_depend>
  <exec_depend>msg_utils</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- <build_depend>g_utility</build_depend>
  <build_export_depend>g_utility</build_export_depend>
  <exec_depend>g_utility</exec_depend> -->


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <build_depend>generating_corridor</build_depend>
  <build_export_depend>generating_corridor</build_export_depend>
  <exec_depend>generating_corridor</exec_depend>

  <!-- <build_depend>task_allocation</build_depend>
  <build_export_depend>task_allocation</build_export_depend>
  <exec_depend>task_allocation</exec_depend> -->

  

  <depend>mapping</depend>
  <depend>plan_env</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
